# makepad-trajectory-replay-demo

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  kickoff.md  prd.md  spec.spec  spec.spec.md  visual.spec.md
design/refs/v2/: README.md
docs/: AUDIT-FINAL.md  IMPLEMENTATION-NOTES.md
plans/: demo-data-trim.md  p2-track-canvas.md  s0-freeze-and-polish.md
scripts/: preload_tiles.sh
src/: main.rs  network.rs  parser.rs  state.rs
src/map/: disk_cache.rs  map_view.rs  mod.rs  tiles.rs
